@@ -21,45 +21,75 @@
 #include "sysinfo.h"
 #include "log.h"
 
+#ifdef HAVE_ZONE_H
+#	include "zone.h"
+#	include "utmpx.h"
+#endif
+
 int	SYSTEM_BOOTTIME(AGENT_REQUEST *request, AGENT_RESULT *result)
 {
-	kstat_ctl_t	*kc;
-	kstat_t		*kp;
-	kstat_named_t	*kn;
-	int		ret = SYSINFO_RET_FAIL;
+	int	ret = SYSINFO_RET_FAIL;
 
-	if (NULL == (kc = kstat_open()))
+#ifdef HAVE_ZONE_H
+	if (GLOBAL_ZONEID == getzoneid())
 	{
-		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot open kernel statistics facility: %s",
-				zbx_strerror(errno)));
-		return SYSINFO_RET_FAIL;
-	}
+#endif
+		kstat_ctl_t	*kc;
+		kstat_t		*kp;
+		kstat_named_t	*kn;
 
-	if (NULL == (kp = kstat_lookup(kc, "unix", 0, "system_misc")))
-	{
-		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot look up in kernel statistics facility: %s",
-				zbx_strerror(errno)));
-		goto clean;
-	}
+		if (NULL == (kc = kstat_open()))
+		{
+			SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot open kernel statistics facility: %s",
+					zbx_strerror(errno)));
+			return ret;
+		}
 
-	if (-1 == kstat_read(kc, kp, 0))
-	{
-		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot read from kernel statistics facility: %s",
-				zbx_strerror(errno)));
-		goto clean;
-	}
+		if (NULL == (kp = kstat_lookup(kc, "unix", 0, "system_misc")))
+		{
+			SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot look up in kernel statistics facility: %s",
+					zbx_strerror(errno)));
+			goto clean;
+		}
 
-	if (NULL == (kn = (kstat_named_t *)kstat_data_lookup(kp, "boot_time")))
-	{
-		SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot look up data in kernel statistics facility: %s",
-				zbx_strerror(errno)));
-		goto clean;
-	}
+		if (-1 == kstat_read(kc, kp, 0))
+		{
+			SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot read from kernel statistics facility: %s",
+					zbx_strerror(errno)));
+			goto clean;
+		}
 
-	SET_UI64_RESULT(result, get_kstat_numeric_value(kn));
-	ret = SYSINFO_RET_OK;
+		if (NULL == (kn = (kstat_named_t *)kstat_data_lookup(kp, "boot_time")))
+		{
+			SET_MSG_RESULT(result, zbx_dsprintf(NULL, "Cannot look up data in kernel statistics facility:"
+					" %s", zbx_strerror(errno)));
+			goto clean;
+		}
+
+		SET_UI64_RESULT(result, get_kstat_numeric_value(kn));
+		ret = SYSINFO_RET_OK;
 clean:
-	kstat_close(kc);
+		kstat_close(kc);
+#ifdef HAVE_ZONE_H
+	}
+	else
+	{
+		struct utmpx	utmpx_local, *utmpx;
 
+		utmpx_local.ut_type = BOOT_TIME;
+
+		setutxent();
+
+		if (NULL != (utmpx = getutxid(&utmpx_local)))
+		{
+			SET_UI64_RESULT(result, utmpx->ut_xtime);
+			ret = SYSINFO_RET_OK;
+		}
+		else
+			SET_MSG_RESULT(result, zbx_strdup(NULL, "Cannot obtain system boot time."));
+
+		endutxent();
+	}
+#endif
 	return ret;
 }
