@@ -63,12 +63,12 @@ LONG WINAPI	DelayLoadDllExceptionFilter(PEXCEPTION_POINTERS excpointers)
 		case VcppException(ERROR_SEVERITY_ERROR, ERROR_PROC_NOT_FOUND):
 			if (delayloadinfo->dlp.fImportByName)
 			{
-				zabbix_log(LOG_LEVEL_DEBUG, "function %s was not found in %sn",
+				zabbix_log(LOG_LEVEL_DEBUG, "function %s was not found in %s",
 						delayloadinfo->dlp.szProcName, delayloadinfo->szDll);
 			}
 			else
 			{
-				zabbix_log(LOG_LEVEL_DEBUG, "function ordinal %d was not found in %sn",
+				zabbix_log(LOG_LEVEL_DEBUG, "function ordinal %d was not found in %s",
 						delayloadinfo->dlp.dwOrdinal, delayloadinfo->szDll);
 			}
 			break;
